postgres and simple test

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,5 +1,10 @@
-GRPC_PORT: 1111
+GRPC_PORT: 50051
 POSTGRES:
-  POSTGRES_HOST: abc1
-  POSTGRES_PORT: abc2
-  POSTGRES_USER: abc3
+  POSTGRES_HOST: postgres
+  POSTGRES_PORT: 5432
+  POSTGRES_USER: postgres
+  POSTGRES_PASSWORD: big_chungus
+  POSTGRES_DB: mydb
+
+  POSTGRES_MAX_CONN: 10
+  POSTGRES_MIN_CONN: 5
