--- a/env.example
+++ b/env.example
@@ -1,6 +1,21 @@
-GRPC_PORT=50051
+GRPC_PORT=50052
 HTTP_PORT=8082
 
-подробного описания не будет, переменных всего 2
-GRPC_PORT и HTTP_PORT - это переменные, на которых запускаются gRPC и HTTP сервера
-GRPC_PORT также используется в grpc-gateway для определения эндпоинта gRPC сервера
+POSTGRES_HOST=postgres
+POSTGRES_DB=mydb
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=big_chungus
+POSTGRES_PORT=5432
+
+REDIS_PASSWORD=ultrapasos
+REDIS_USER=superidol
+REDIS_USER_PASSWORD=big_chungus
+REDIS_PORT=6379
+
+# -- Описание:
+# GRPC_PORT и HTTP_PORT - это переменные, на которых запускаются gRPC и HTTP сервера
+# GRPC_PORT также используется в grpc-gateway для определения эндпоинта gRPC сервера
+#
+# POSTGRES_* - переменные для включения в строку подключения (Postgres)
+#
+# REDIS_* - переменные для включения в строку подключения (Redis)
