--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,7 +14,8 @@ build:
   stage: build
   image: docker:24.0.5
   services:
-    - docker:24.0.5-dind
+    - name: docker:24.0.5-dind
+      alias: docker
   script:
     - docker build -t orders_service:latest -f ./build/backendDockerfile ./
     - docker build -t tests:latest -f ./build/integrationTests/Dockerfile ./
@@ -22,7 +23,8 @@ build:
 test:
   stage: test
   services:
-    - docker:24.0.5-dind
+    - name: docker:dind
+      alias: docker
   script:
     - cp ./env.example .env
     - docker compose -f ./deployments/integrationTests/docker-compose.yml down
