--- a/deployments/integrationTests/docker-compose.yml
+++ b/deployments/integrationTests/docker-compose.yml
@@ -7,8 +7,8 @@ services:
     user: postgres
     ports:
       - "5432:5432"
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
+    # volumes:
+    #   - postgres_data:/var/lib/postgresql/data
     environment:
       POSTGRES_DB: db_test
       POSTGRES_USER: testuser
@@ -26,8 +26,8 @@ services:
     image: redis:latest
     ports:
       - "6379:6379"
-    volumes:
-      - redis_data:/data
+    # volumes:
+    #   - redis_data:/data
     healthcheck:
       test: [ "CMD-SHELL", "redis-cli", "ping" ]
       interval: 5s
@@ -38,9 +38,7 @@ services:
       - deployments_service_network
 
   backend:
-    build:
-      context: .
-      dockerfile: ../backend/Dockerfile
+    image: orders_service
     ports:
       - "8080:8080"
       - "50051:50051"
@@ -62,6 +60,9 @@ services:
     networks:
       - deployments_service_network
 
-volumes:
-  postgres_data:
-  redis_data:
+# volumes:
+#   postgres_data:
+#   redis_data:
+
+networks:
+  deployments_service_network:
