--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,7 +16,10 @@ build:
   services:
     - name: docker:24.0.5-dind
       alias: docker
+  variables:
+    DOCKER_HOST: tcp://docker:2375
   script:
+    - docker info
     - docker build -t orders_service:latest ./
     - docker build -t tests:latest -f ./build/integrationTests/Dockerfile ./
 
