try to fix pipeline #2

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,12 +12,13 @@ lint:
 
 build:
   stage: build
-  image: docker:24.0.5
-  services:
-    - name: docker:24.0.5-dind
-      alias: docker
-  variables:
-    DOCKER_HOST: tcp://docker:2375
+  needs: []
+  # image: docker:24.0.5
+  # services:
+  #   - name: docker:24.0.5-dind
+  #     alias: docker
+  # variables:
+  #   DOCKER_HOST: tcp://docker:2375
   script:
     - docker info
     - docker build -t orders_service:latest ./
