--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,14 +13,12 @@ lint:
 build:
   stage: build
   needs: []
-  # image: docker:24.0.5
-  # services:
-  #   - name: docker:24.0.5-dind
-  #     alias: docker
+  image: docker:24.0.5
+  services:
+    - docker:24.0.5-dind
   # variables:
   #   DOCKER_HOST: tcp://docker:2375
   script:
-    - docker info
     - docker build -t orders_service:latest ./
     - docker build -t tests:latest -f ./build/integrationTests/Dockerfile ./
 
