--- a/.env
+++ b/.env
@@ -1,5 +1,11 @@
-GRPC_PORT=50052
-HTTP_PORT=8082
+GRPC_PORT=50051
+HTTP_PORT=8081
+GRPC_PORT_1=50051
+HTTP_PORT_1=8081
+GRPC_PORT_2=50052
+HTTP_PORT_2=8082
+GRPC_PORT_3=50053
+HTTP_PORT_3=8083
 
 POSTGRES_HOST=postgres
 POSTGRES_DB=mydb
